product ui updated

--- a/src/app/nav/post-form/post-form.component.html
+++ b/src/app/nav/post-form/post-form.component.html
@@ -6,9 +6,9 @@
         enctype="multipart/form-data" novalidate>
         <div class="modal-header text-dark">
           <h5 *ngIf="this.postService.selectedPostToEdit==null;else h5Block" class="modal-title" id="exampleModalLabel">
-            Upload Post</h5>
+            Upload Post <i class="fas fa-upload"></i></h5>
           <ng-template #h5Block>
-            <h5 class="modal-title me-3" id="exampleModalLabel">Edit Post</h5>
+            <h5 class="modal-title me-3" id="exampleModalLabel">Edit Post <i class="far fa-edit"></i></h5>
           </ng-template>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
@@ -22,12 +22,7 @@
                 </div>
                 <button type="button" class="btn btn-danger btn-sm" style="max-width: 40px; min-width: 40px;"
                   (click)="deleteImage(link)">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-trash-fill" viewBox="0 0 16 16">
-                    <path
-                      d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z" />
-                  </svg>
-
+                  <i class="far fa-trash-alt"></i>
                 </button>
               </div>
             </div>
