--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -10,9 +10,9 @@
         </a>
         <hr style="clear: both;visibility: hidden;">
         <button class="btn btn-primary btn-sm info" style="margin-right: 5px;" data-bs-toggle="modal"
-          data-bs-target="#exampleModal" (click)="selectedPost(post)">Edit</button>
-        <button class="btn btn-danger btn-sm info" style="margin-left: 5px;"
-          (click)="deleteThisPost(post.id)">Delete</button>
+          data-bs-target="#exampleModal" (click)="selectedPost(post)"><i class="fas fa-edit"></i></button>
+        <button class="btn btn-danger btn-sm info" style="margin-left: 5px;" (click)="deleteThisPost(post.id)"><i
+            class="fas fa-trash"></i></button>
       </div>
     </div>
     <div routerLink="/product/{{post.id}}" class="card-body text-center">
