--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,39 +1,54 @@
-/* mobile */
-@media only screen and (min-width: 300px) {
-  .container{
-    overflow-y:scroll;
-    box-shadow: 0 0 8px 4px white;
-    background-color: black;
-    color: white;
-    width: fit-content;
-    min-width: 310px;
-    padding: 10px;
-  }
 
-}
-/* laptop */
-@media only screen and (min-width : 600px) {
-  .container{
+/* mobile */
+@media only screen and (max-device-width: 799px) {
+  .con{
     overflow-y:scroll;
-    box-shadow: 0 0 8px 4px white;
     background-color: black;
     color: white;
     width: fit-content;
-    min-width: 310px;
-    display: flex;
+    width: 100%;
     padding: 10px;
   }
   .images{
+    border-radius: 10px;
+    border: whitesmoke 1px solid;
+    display:grid ;
+    place-content: center;
+    padding-bottom: 5px;
+ } 
+}
+
+/* laptop */
+@media only screen and (min-device-width : 800px) {
+  .con{
+    overflow-y:unset;
+    overflow-x:unset;
+    margin-top: 15px;
+    /* border:whitesmoke 1px solid; */
+    background-color: black;
+    color: white;
+    width: 80%;
+    height:auto;
+    min-width: 310px;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+  }
+  .images{
+    border-radius: 10px;
+    border:whitesmoke 1px solid;
     position:sticky;
     top:0
  } 
 }
 
- 
+.title{
+  border-bottom: whitesmoke 1px solid;
+  margin-bottom: 2px;
+}
 
-.img-rounded{
-  height: 300px;
-  width: 300px;
+.description{
+  margin-bottom: 20px;
 }
 
 .img-boxes{
@@ -48,10 +63,9 @@
 }
 
 .in-frame {
-  border:whitesmoke 3px solid;
+  border:whitesmoke 2px solid;
 }
 
 .info{
   height: 300px;
-  width: 300px;
 }
