product images auto-resized

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -37,9 +37,8 @@
         <div class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" (change)="change()" id="searchInp"
             aria-label="Search">
-          <a (click)="reset()">
-            <button id="search" class="btn btn-outline-light" type="button">Search</button>
-          </a>
+          <button id="search" class="btn btn-outline-light" type="button" (click)="reset()"><i
+              class="fas fa-search"></i></button>
         </div>
       </div>
     </div>
