--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -25,31 +25,28 @@
               aria-expanded="false">
               <button class="btn btn-outline-light dropdown-toggle">Categories</button>
             </a>
-            <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-              <div *ngFor="let category of this.postService.categories()">
-                <a href="#{{category}}"><button class="btn btn-sm m-1 btn-outline-light">{{category}}</button></a>
-              </div>
+            <ul style="position: absolute;" class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
+              <li *ngFor="let category of this.postService.categories()"><a class="dropdown-item"
+                  href="#{{category}}">{{category}}</a></li>
             </ul>
           </li>
         </ul>
         <div class="d-flex">
-
-          <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <button id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                  class=" nav-link dropdown-toggle btn btn-dark btn-sm shadow-none">
-                  <i class="fas fa-filter"></i>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li *ngFor="let item of searchQuerys"><a (click)="this.searchBy = item" class="dropdown-item"
-                      href="#">{{item}}</a></li>
-                </ul>
-              </li>
+          <div class="input-group">
+            <button id="navbarDarkDropdownMenuLink2" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+              class=" nav-link dropdown-toggle btn btn-dark btn-sm shadow-none " style="color: white;">
+              <i class="fas fa-filter"></i>
+            </button>
+            <ul style="position: absolute;" class="dropdown-menu dropdown-menu-dark"
+              aria-labelledby="navbarDarkDropdownMenuLink2">
+              <li *ngFor="let item of searchQuerys"><a (click)="this.searchBy = item" class="dropdown-item"
+                  href="#">{{item}}</a></li>
             </ul>
+            <input class="form-control ms-2 me-2" type="search" placeholder="Search by {{searchBy}}" (change)="change()"
+              id="searchInp" aria-label="Search">
+
           </div>
-          <input class="form-control ms-2 me-2" type="search" placeholder="Search by {{searchBy}}" (change)="change()"
-            id="searchInp" aria-label="Search">
+
           <button id="search" class="btn btn-outline-light" type="button" (click)="reset()"><i
               class="fas fa-search"></i></button>
         </div>
