--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="con container-fluid ">
   <div class="images">
-    <div class="container-fluid main-frame mt-3 mb-3">
+    <div class="container-fluid main-frame mb-3">
       <ng-img-magnifier thumbImage="{{post.imgPath[this.index]}}" fullImage="{{post.imgPath[this.index]}}" [top]="0"
         [right]="0" [lensWidth]="100" [lensHeight]="100" [resultWidth]="30" [resultHeight]="25"></ng-img-magnifier>
     </div>
