--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -3,7 +3,8 @@
   <div>
     <div class="text-center">
       <div class="text-center mb-2 p-1">
-        <p id="" class="display-5 text-light text-decoration-underline">Showing Results of '{{this.query}}'</p>
+        <p id="" class="display-5 text-light text-decoration-underline">Showing Results of '{{this.query}}' filtered by
+          '{{this.searchBy}}'</p>
       </div>
       <div id="post-container" *ngFor="let post of postsArr" class="card-group mb-3"
         style="overflow: hidden;display:inline-block">
