loading spinners added to post-form

--- a/src/app/nav/post-form/post-form.component.html
+++ b/src/app/nav/post-form/post-form.component.html
@@ -73,6 +73,11 @@
               <option *ngFor="let category of this.postService.categories()" [value]="category">{{category}}</option>
             </select>
           </div>
+          <div *ngIf="postCreationStatus == 'load'" class="text-center mt-2">
+            <div class="spinner-border text-info" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
           <div *ngIf="postCreationStatus=='success' && this.message!=''"
             class="alert alert-success fade show mt-1 text-center" role="alert">
             <strong>{{this.message}}</strong>
