--- a/src/app/dashboard/post-container/post-container.component.html
+++ b/src/app/dashboard/post-container/post-container.component.html
@@ -12,3 +12,7 @@
     </div>
   </div>
 </div>
+<div class="d-flex justify-content-center mt-1">
+  <app-view-more [loadIndex]="this.PostService.loadIndex" [loading]="this.loading"
+    [categoriesLength]="this.PostService.categories().length" (click)="this.loadMore()"></app-view-more>
+</div>
