--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -14,3 +14,7 @@
     </div>
   </div>
 </div>
+<div class="d-flex justify-content-center mt-1">
+  <app-view-more [loadIndex]="this.loadIndex" [loading]="this.loading" [categoriesLength]="1" (click)="this.loadMore()">
+  </app-view-more>
+</div>
