--- a/src/app/view-more/view-more.component.html
+++ b/src/app/view-more/view-more.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="this.loading" class="spinner-border mb-5 text-light" style="width: 3rem;height: 3rem;" role="status">
+<div *ngIf="this.loading" class="spinner-border mt-4 mb-5 text-light" style="width: 3rem;height: 3rem;" role="status">
   <span class="visually-hidden">Loading...</span>
 </div>
 <button *ngIf="!this.loading && this.loadIndex<this.categoriesLength" class="btn btn-outline-light mb-5">View More
