google login added

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -18,7 +18,10 @@
           </li>
           <li class="nav-item">
             <a class="nav-link text-shadow"><button class="btn btn-outline-light" data-bs-toggle="modal"
-                data-bs-target="#exampleModal" (click)="this.postService.emptyUploadForm()">Upload Post</button></a>
+                data-bs-target="#exampleModal" (click)="this.postService.emptyUploadForm()">Upload</button></a>
+          </li>
+          <li>
+            <app-google-sign-in></app-google-sign-in>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
