--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -1,5 +1,7 @@
 <div class="post1">
-  <div class="card border-dark text-dark hovereffect" style="border-radius: 10px;">
+  <div class="card border-dark text-dark hovereffect"
+    [ngStyle]="{'border-bottom-left-radius': this.postService.user.name?'0px':'10px','border-bottom-right-radius':this.postService.user.name?'0px':'10px'}"
+    style="border-radius: 10px;">
     <div class="image-con">
       <img routerLink="/product/{{post.id}}" [src]="post.imgPath[0]" class="in-img rounded" style="object-fit: cover;"
         alt="Error Loading Image">
@@ -9,10 +11,6 @@
           View Post
         </a>
         <hr style="clear: both;visibility: hidden;">
-        <button *ngIf="this.postService.user.name" class="btn btn-primary btn-sm info" style="margin-right: 5px;" data-bs-toggle="modal"
-          data-bs-target="#exampleModal" (click)="selectedPost(post)"><i class="fas fa-edit"></i></button>
-        <button *ngIf="this.postService.user.name" class="btn btn-danger btn-sm info" style="margin-left: 5px;"
-          (click)="deleteThisPost(post.id)"><i class="fas fa-trash"></i></button>
       </div>
     </div>
     <div routerLink="/product/{{post.id}}" class="content-con card-body text-center">
@@ -29,4 +27,11 @@
       </h6>
     </div>
   </div>
+  <button *ngIf="this.postService.user.name" class="btn btn-primary btn-sm"
+    style="width: 50%;border-top-left-radius:0px;border-top-right-radius:0px; border-bottom-right-radius: 0px;"
+    data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="selectedPost(post)"><i
+      class="fas fa-edit"></i></button>
+  <button *ngIf="this.postService.user.name" class="btn btn-danger btn-sm"
+    style="width: 50%;border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-left-radius: 0px;"
+    (click)="deleteThisPost(post.id)"><i class="fas fa-trash"></i></button>
 </div>
