admin restrictions added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="container-custom w-100">
       <app-nav></app-nav>
       <h1 class="main-title display-1 fw-normal text-shadow text-light mb-5">AGS Market</h1>
-      <a href="#categories"><button class="btn btn-lg btn-warning mt-5"><strong>Get Started</strong></button></a>
+      <a href="#Watches"><button class="btn btn-lg btn-warning mt-5"><strong>Get Started</strong></button></a>
     </div>
   </div>
 </div>
